--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,3 +5,15 @@
 @import '@stackbit/components/styles/default.css';
 @import 'theme.css';
 @import url('https://fonts.googleapis.com/css2?family=Rakkas&display=swap');
+
+
+@layer components {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        @apply font-festive;
+    }
+}
